moved header to the left to avoid overlapping

--- a/frontend/style/allMovies.css
+++ b/frontend/style/allMovies.css
@@ -66,7 +66,7 @@ header {
   padding-left: 1%;
   padding-right: 1%;  
   position: absolute;    
-  left: 40%;
+  left: 35%;
   margin-left: -50px !important;
   display: block;
   font-size: 250%;
