--- a/frontend/style/filminfo.css
+++ b/frontend/style/filminfo.css
@@ -16,11 +16,6 @@ header {
 
 /* BUTTOMS. Found in the header and other elements of the page. */
 
-
-
-
-
-
 .btn{
   font-family: neon; 
   background-color: rgba(0, 0, 0, 0.3);
@@ -53,7 +48,7 @@ header {
   padding-left: 1%;
   padding-right: 1%;  
   position: absolute;    
-  left: 40%;
+  left: 35%;
   margin-left: -50px !important;
   display: block;
   font-size: 250%;
@@ -62,6 +57,7 @@ header {
   -webkit-text-stroke: initial;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: rgba(238, 30, 210, 0.514);
+  
 }
 .navbar-brand:hover {
   background-color: rgba(238, 30, 210, 0.2);
