--- a/frontend/style/mybookings.css
+++ b/frontend/style/mybookings.css
@@ -41,7 +41,7 @@
     padding-left: 1%;
     padding-right: 1%;  
     position: absolute;    
-    left: 40%;
+    left: 35%;
     margin-left: -50px !important;
     display: block;
     font-size: 250%;
