--- a/frontend/style/seatBooking.css
+++ b/frontend/style/seatBooking.css
@@ -49,7 +49,7 @@ header {
   padding-left: 1%;
   padding-right: 1%;
   position: absolute;
-  left: 40%;
+  left: 35%;
   margin-left: -50px !important;
   display: block;
   font-size: 250%;
